# EasyDelegate

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  annotated.html  biicode.cmake  classEasyDelegate_1_1CachedDelegate-members.html  classEasyDelegate_1_1CachedDelegate.html  classEasyDelegate_1_1DeferredMemberCaller-members.html  classEasyDelegate_1_1DeferredMemberCaller.html  classEasyDelegate_1_1DeferredStaticCaller-members.html  classEasyDelegate_1_1DeferredStaticCaller.html  classEasyDelegate_1_1DelegateException.html  classEasyDelegate_1_1DelegateSet-members.html  classEasyDelegate_1_1DelegateSet.html  classEasyDelegate_1_1GenericCachedDelegate-members.html  classEasyDelegate_1_1GenericCachedDelegate.html  classEasyDelegate_1_1GenericDelegate-members.html  classEasyDelegate_1_1GenericDelegate.html  classEasyDelegate_1_1IDeferredCaller-members.html  classEasyDelegate_1_1IDeferredCaller.html  classEasyDelegate_1_1IDelegate-members.html  classEasyDelegate_1_1IDelegate.html  classEasyDelegate_1_1ITypedDeferredCaller-members.html  classEasyDelegate_1_1ITypedDeferredCaller.html  classEasyDelegate_1_1ITypedDelegate-members.html  classEasyDelegate_1_1ITypedDelegate.html  classEasyDelegate_1_1InvalidMethodPointerException-members.html  classEasyDelegate_1_1InvalidMethodPointerException.html  classEasyDelegate_1_1InvalidThisPointerException-members.html  classEasyDelegate_1_1InvalidThisPointerException.html  classEasyDelegate_1_1MemberDelegate-members.html  classEasyDelegate_1_1MemberDelegate.html  classEasyDelegate_1_1StaticDelegate-members.html  classEasyDelegate_1_1StaticDelegate.html  classMyCustomClass-members.html  classMyCustomClass.html  classes.html  deferredcallers_8hpp.html  (+46 more)
include/: deferredcallers.hpp  delegates.hpp  delegateset.hpp  easydelegate.hpp  (+1 more)
(+54 files in other folders)
